fixed overflow on tablet

--- a/styles/main.css
+++ b/styles/main.css
@@ -3437,6 +3437,9 @@ position: absolute;
      }
    }
 @media screen and (min-width: 481px) and (max-width: 768px){
+  .container {
+    overflow: hidden;
+  }
   #overlay {
     height: 138%;
   }
